k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - image: fl64/hl-backend:latest
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8000
              name: http
